...
                },
                child: const Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    RadioListTile<_WeekStartDay>(
                      key: ValueKey('week-start-monday-option'),
                      title: Text('Monday'),
                      value: _WeekStartDay.monday,
                    ),
                    RadioListTile<_WeekStartDay>(
                      key: ValueKey('week-start-sunday-option'),
                      title: Text('Sunday'),
                      value: _WeekStartDay.sunday,
                    ),
                  ],
                ),
              ),
              actions: [
                TextButton(
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                  child: const Text('Cancel'),
                ),
                TextButton(
                  key: const ValueKey('week-start-done-button'),
                  onPressed: () {
                    Navigator.of(context).pop(selectedWeekStartDay);
                  },
                  child: const Text('Done'),
                ),
              ],
            );
          },
        );
      },
...
